[tool.poetry]
name = "appthreat-chen"
version = "1.0.0"
description = "Code Hierarchy Exploration Net (chen)"
authors = ["Team AppThreat <cloud@appthreat.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "chenpy"}]
homepage = "https://github.com/AppThreat/chen"
repository = "https://github.com/AppThreat/chen"
keywords = ["chen", "code-analysis", "static-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
exclude = ["ci", "console", "dataflowengineoss", "macros", "platform", "project", "scripts", "semanticcpg", "target", "tests", "workspace"]

[tool.poetry.urls]
"CI" = "https://github.com/AppThreat/chen/actions"

[tool.poetry.scripts]
chen = 'chenpy.cli:main'

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
httpx = "^0.24.1"
websockets = "^11.0.2"
uvloop = {version = "^0.17.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'", optional = true}
orjson = "^3.9.0"
rich = "^13.4.1"
oras = "^0.1.24"
appdirs = "^1.4.4"
psutil = "^5.9.5"
packageurl-python = "^0.11.2"
gitpython = "^3.1.37"


[tool.poetry.extras]
science = ["uvloop", "networkx", "torch-geometric", "torch", "torchtext"]
database = ["networkx"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
pyinstaller = "^5.10.1"
pdoc3 = "^0.10.0"

[tool.poetry.group.science]
optional = true

[tool.poetry.group.database]
optional = true

[tool.poetry.group.science.dependencies]
networkx = {extras = ["default", "extra"], version = "^3.1"}
torch-geometric = {version = "^2.4.0"}
torch = {version = "^2.1.0+cpu", source = "torch"}
torchtext = {version = "^0.16.0+cpu", markers = "sys_platform == 'linux' or sys_platform == 'darwin'", source = "torch"}
nbconvert = "^7.9.2"
jupyter-core = "^5.4.0"
jupyter-client = "^8.4.0"
notebook = "^7.0.5"

[tool.poetry.group.database.dependencies]
networkx = {extras = ["default", "extra"], version = "^3.1"}

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.1.0+cpu.html"
priority = "explicit"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
