[tool.poetry]
name = "appthreat-chen"
version = "2.3.9"
description = "Code Hierarchy Exploration Net (chen)"
authors = ["Team AppThreat <cloud@appthreat.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "chenpy"}]
homepage = "https://github.com/AppThreat/chen"
repository = "https://github.com/AppThreat/chen"
keywords = ["chen", "code-analysis", "static-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
exclude = ["ci", "console", "dataflowengineoss", "macros", "platform", "project", "scripts", "semanticcpg", "target", "tests", "workspace"]

[tool.poetry.urls]
"CI" = "https://github.com/AppThreat/chen/actions"

[tool.poetry.scripts]
chen = 'chenpy.cli:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
httpx = "^0.27.2"
websockets = "^14.1"
uvloop = {version = "^0.21.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'", optional = true}
orjson = "^3.10.13"
rich = "^13.9.4"
oras = "0.1.26"
appdirs = "^1.4.4"
psutil = "^6.1.1"
packageurl-python = "^0.11.2"
gitpython = "^3.1.44"


[tool.poetry.extras]
science = ["uvloop", "networkx", "torch-geometric", "torch", "torchtext"]
database = ["networkx"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"
pdoc3 = "^0.11.5"

[tool.poetry.group.science]
optional = true

[tool.poetry.group.database]
optional = true

[tool.poetry.group.science.dependencies]
networkx = {extras = ["default", "extra"], version = "^3.4.2"}
torch-geometric = "^2.6.1"
torch = {version = "^2.5.1+cpu", source = "torch"}
torchtext = {version = "^0.18.0+cpu", markers = "sys_platform == 'linux' or sys_platform == 'darwin'", source = "torch"}
nbconvert = "^7.16.4"
jupyter-core = "^5.7.2"
jupyter-client = "^8.6.3"
notebook = "^7.3.2"

[tool.poetry.group.database.dependencies]
networkx = {extras = ["default", "extra"], version = "^3.4.2"}

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.5.1+cpu.html"
priority = "explicit"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
